feat(navbar) add tooltips to navbar items (desktop only)

--- a/web/src/components/layout/nav/contribute-menu/contribute-menu.css
+++ b/web/src/components/layout/nav/contribute-menu/contribute-menu.css
@@ -101,6 +101,7 @@
                     a {
                         overflow: hidden;
                         text-overflow: ellipsis;
+                        max-width: 210px;
                     }
 
                     &.coming-soon p {
