--- a/web/src/components/layout/nav/nav.css
+++ b/web/src/components/layout/nav/nav.css
@@ -482,6 +482,10 @@ header {
         .coming-soon-text {
             margin-inline-start: 8px;
             width: 100%;
+            max-width: 250px;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
             text-align: left;
             padding: 0;
             font-family: var(--base-font-family);
