fix(nav bar): nav bar fixes

--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -188,6 +188,12 @@ button {
             overflow: auto;
         }
     }
+
+    &.datasets {
+        .menu-list {
+            box-shadow: none;
+        }
+    }
 }
 
 /**
