--- a/web/src/components/layout/nav/nav.css
+++ b/web/src/components/layout/nav/nav.css
@@ -310,6 +310,12 @@ header {
                 @media (width > 576px) and (width < 1200px) {
                     margin-block-start: 0;
                 }
+
+                a {
+                    @media (--lg-down) {
+                        margin-inline-start: 30px;
+                    }
+                }
             }
         }
 
@@ -337,7 +343,7 @@ header {
         }
 
         & .track-fs-download {
-            margin-block-end: 10px;
+            margin-block-end: 8px;
 
             @media (width > 576px) and (width < 1200px) {
                 margin-block-end: 0;
@@ -480,7 +486,6 @@ header {
 
         .contribute-link,
         .coming-soon-text {
-            margin-inline-start: 8px;
             width: 100%;
             max-width: 250px;
             white-space: nowrap;
@@ -496,7 +501,14 @@ header {
             align-items: center;
         }
 
+        .contribute-link {
+            display: flex;
+            gap: 10px;
+            margin-left: 0;
+        }
+
         .coming-soon-text {
+            margin-inline-start: 8px;
             color: var(--warm-grey);
             cursor: default;
 
@@ -528,7 +540,6 @@ header {
     }
 
     & .nav-links a {
-        margin-inline-start: 30px;
         padding: 0 0 10px;
         line-height: 1.17;
         font-family: var(--base-font-family);
