--- a/web/src/components/layout/nav/nav.css
+++ b/web/src/components/layout/nav/nav.css
@@ -268,6 +268,11 @@ header {
         @media (--md-down) {
             display: none;
         }
+
+        &::after {
+            content: '';
+            display: block;
+        }
     }
 }
 
