--- a/web/src/components/layout/nav/nav.css
+++ b/web/src/components/layout/nav/nav.css
@@ -268,6 +268,11 @@ header {
         @media (--md-down) {
             display: none;
         }
+
+        &::after {
+            content: '';
+            display: block;
+        }
     }
 }
 
@@ -310,6 +315,12 @@ header {
                 @media (width > 576px) and (width < 1200px) {
                     margin-block-start: 0;
                 }
+
+                a {
+                    @media (--lg-down) {
+                        margin-inline-start: 30px;
+                    }
+                }
             }
         }
 
@@ -337,7 +348,7 @@ header {
         }
 
         & .track-fs-download {
-            margin-block-end: 10px;
+            margin-block-end: 8px;
 
             @media (width > 576px) and (width < 1200px) {
                 margin-block-end: 0;
@@ -480,7 +491,6 @@ header {
 
         .contribute-link,
         .coming-soon-text {
-            margin-inline-start: 8px;
             width: 100%;
             max-width: 250px;
             white-space: nowrap;
@@ -493,6 +503,23 @@ header {
             font-weight: 400;
             text-transform: capitalize;
             border-bottom: none;
+            align-items: center;
+        }
+
+        .contribute-link {
+            display: flex;
+            gap: 10px;
+            margin-left: 0;
+        }
+
+        .coming-soon-text {
+            margin-inline-start: 8px;
+            color: var(--warm-grey);
+            cursor: default;
+
+            span {
+                font-size: var(--font-size-xs);
+            }
         }
 
         .coming-soon-text {
@@ -518,7 +545,6 @@ header {
     }
 
     & .nav-links a {
-        margin-inline-start: 30px;
         padding: 0 0 10px;
         line-height: 1.17;
         font-family: var(--base-font-family);
