--- a/web/src/components/pages/dashboard/stats/leaderboard.css
+++ b/web/src/components/pages/dashboard/stats/leaderboard.css
@@ -56,6 +56,11 @@
                     display: block;
                     white-space: nowrap;
                     font-size: var(--font-size);
+
+                    [dir='rtl'] & {
+                        margin-right: 10px;
+                        margin-left: unset;
+                    }
                 }
             }
         }
