Fix: Proper padding for header text on About page for small screens

--- a/web/src/components/pages/about/why-common-voice.css
+++ b/web/src/components/pages/about/why-common-voice.css
@@ -45,7 +45,7 @@
         }
 
         @media (--md-down) {
-            padding-right: 1.25rem;
+            padding: 0 1rem;
         }
 
         & h2 {
