--- a/web/src/components/pages/new-home/community-section/community-section.css
+++ b/web/src/components/pages/new-home/community-section/community-section.css
@@ -14,7 +14,7 @@
         @media (--sm-down) {
             font-size: 24px;
             margin-inline: 20px;
-            text-align: justify;
+            text-align: left;
         }
     }
 
@@ -36,6 +36,10 @@
             margin: 80px 20px;
             padding: 24px;
             min-height: 500px;
+        }
+
+        @media (--sm-down) {
+            margin: 40px 20px;
         }
 
         .left-pane {
