feat(home page): add initial get involved section

--- a/web/src/components/pages/new-home/action-items-section/action-items-section.css
+++ b/web/src/components/pages/new-home/action-items-section/action-items-section.css
@@ -1,6 +1,6 @@
 .action-items-section-container {
     text-align: center;
-    background: url('./assets/background.jpg');
+    background: url('../shared-assets/background.jpg');
     background-position-y: 100%;
     background-size: 100% 40%;
     background-repeat: no-repeat;
